ESP32_S3/ошибки компиляции ide
etch_jan17a.ino: In lambda function:
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:108:5: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
In file included from c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson.hpp:65,
                 from c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson.h:9,
                 from c:\Users\sasa\Documents\Arduino\libraries\ESP_Async_WebServer/ESPAsyncWebServer.h:21,
                 from H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:6:
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:63:58: note: declared here
   63 | class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
      |                                                          ^~~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:109:44: warning: 'ArduinoJson::V742PB22::JsonArray ArduinoJson::V742PB22::JsonDocument::createNestedArray(TChar*) [with TChar = const char]' is deprecated: use doc[key].to<JsonArray>() instead [-Wdeprecated-declarations]
In file included from c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson.hpp:42:
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/JsonDocument.hpp:356:13: note: declared here
  356 |   JsonArray createNestedArray(TChar* key) {
      |             ^~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:112:49: warning: 'ArduinoJson::V742PB22::JsonObject ArduinoJson::V742PB22::JsonArray::createNestedObject() const' is deprecated: use add<JsonObject>() instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:140:19: note: declared here
  140 | inline JsonObject JsonArray::createNestedObject() const {
      |                   ^~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino: In lambda function:
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:132:7: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:63:58: note: declared here
   63 | class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
      |                                                          ^~~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino: In function 'void handleWSMessage(uint8_t, uint8_t*, size_t)':
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:171:3: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:63:58: note: declared here
   63 | class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
      |                                                          ^~~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino: In function 'void sendNodeListWS()':
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:193:3: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:63:58: note: declared here
   63 | class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
      |                                                          ^~~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:196:42: warning: 'ArduinoJson::V742PB22::JsonArray ArduinoJson::V742PB22::JsonDocument::createNestedArray(TChar*) [with TChar = const char]' is deprecated: use doc[key].to<JsonArray>() instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/Document/JsonDocument.hpp:356:13: note: declared here
  356 |   JsonArray createNestedArray(TChar* key) {
      |             ^~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:198:47: warning: 'ArduinoJson::V742PB22::JsonObject ArduinoJson::V742PB22::JsonArray::createNestedObject() const' is deprecated: use add<JsonObject>() instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:140:19: note: declared here
  140 | inline JsonObject JsonArray::createNestedObject() const {
      |                   ^~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino: In function 'void sendSystemInfoWS()':
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:211:3: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:63:58: note: declared here
   63 | class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
      |                                                          ^~~~~~~~~~~~~~~~~~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino: In function 'void setupESPNow()':
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:236:28: error: invalid conversion from 'void (*)(const uint8_t*, const uint8_t*, int)' {aka 'void (*)(const unsigned char*, const unsigned char*, int)'} to 'esp_now_recv_cb_t' {aka 'void (*)(const esp_now_recv_info*, const unsigned char*, int)'} [-fpermissive]
In file included from H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:9:
C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.5-9bb7aa84-v2\esp32s3/include/esp_wifi/include/esp_now.h:172:54: note:   initializing argument 1 of 'esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t)'
  172 | esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:237:28: error: invalid conversion from 'void (*)(const uint8_t*, esp_now_send_status_t)' {aka 'void (*)(const unsigned char*, esp_now_send_status_t)'} to 'esp_now_send_cb_t' {aka 'void (*)(const wifi_tx_info_t*, esp_now_send_status_t)'} [-fpermissive]
C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.5-9bb7aa84-v2\esp32s3/include/esp_wifi/include/esp_now.h:193:54: note:   initializing argument 1 of 'esp_err_t esp_now_register_send_cb(esp_now_send_cb_t)'
  193 | esp_err_t esp_now_register_send_cb(esp_now_send_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino: In function 'void onESPNowRecv(const uint8_t*, const uint8_t*, int)':
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\sketch\sketch_jan17a\sketch_jan17a.ino:252:3: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
c:\Users\sasa\Documents\Arduino\libraries\ArduinoJson\src/ArduinoJson/compatibility.hpp:63:58: note: declared here
   63 | class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
      |                                                          ^~~~~~~~~~~~~~~~~~
Используем библиотеку WiFi версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi 
Используем библиотеку Networking версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Network 
Используем библиотеку ESP Async WebServer версии 3.9.4 из папки: C:\Users\sasa\Documents\Arduino\libraries\ESP_Async_WebServer 
Используем библиотеку FS версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\FS 
Используем библиотеку Async TCP версии 3.4.10 из папки: C:\Users\sasa\Documents\Arduino\libraries\Async_TCP 
Используем библиотеку WebSockets версии 2.7.2 из папки: C:\Users\sasa\Documents\Arduino\libraries\WebSockets 
Используем библиотеку NetworkClientSecure версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\NetworkClientSecure 
Используем библиотеку ArduinoJson версии 7.4.2 из папки: C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson 
Используем библиотеку SPIFFS версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\SPIFFS 
Используем библиотеку Hash версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash 
exit status 1

Compilation error: invalid conversion from 'void (*)(const uint8_t*, const uint8_t*, int)' {aka 'void (*)(const unsigned char*, const unsigned char*, int)'} to 'esp_now_recv_cb_t' {aka 'void (*)(const esp_now_recv_info*, const unsigned char*, int)'} [-fpermissive]
